# MyoFInDer

./: .gitignore  Download  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: build_github_pages.yml  build_windows_installer.yml  codeql-analysis.yml  python_package.yml  test.yml  test_python_package.yml
CellenTellen/: README.md
Executable_files/: Cellen-Tellen.aip  Cellen-Tellen_regular.aip  cellen-tellen.bat  cellen-tellen.sh  compile.bat  compile.sh  compile_kul.bat  compile_regular.bat
Source Code/: __main__.py  files_table.py  image_canvas.py  imagewindow.py  main.py  main_window.py  nucleiFibreSegmentation.py  project_name_window.py  settings_window.py  splash_window.py  structure_classes.py  table.py  validateFileName.py  warning_window.py
cellen_tellen/: __init__.py  __main__.py  files_table.py  image_canvas.py  image_segmentation.py  main_window.py  splash_window.py
cellen_tellen/tools/: __init__.py  _check_image.py  project_name_window.py  save_popup.py  settings_window.py  splash_window.py  structure_classes.py  warning_window.py
docs/: Gemfile  _config.yml  index.markdown  index.md  installation.markdown  troubleshooting.markdown  usage.markdown
docs/_includes/: head-custom.html
requirements/: requirements-310-linux.txt  requirements-310-macos_arm.txt  requirements-310-macos_x64.txt  requirements-310-windows.txt  requirements-310.txt  requirements-311-linux.txt  requirements-311-macos_arm.txt  requirements-311-macos_x64.txt  requirements-311-windows.txt  requirements-311.txt  requirements-312-linux.txt  requirements-312-macos_arm.txt  requirements-312-macos_x64.txt  requirements-312-windows.txt  requirements-313-linux.txt  requirements-313-macos_arm.txt  requirements-313-windows.txt  requirements-314-linux.txt  requirements-314-macos_arm.txt  requirements-314-windows.txt
src/cellen_tellen/: __init__.py  __main__.py  files_table.py  image_canvas.py  image_segmentation.py  main_window.py
src/cellen_tellen/tools/: __init__.py  project_name_window.py  save_popup.py  settings_window.py  splash_window.py  structure_classes.py
src/myofinder/: __init__.py  __main__.py  __version__.py  files_table.py  image_canvas.py  image_segmentation.py  main_window.py
src/myofinder/tools/: __init__.py  _check_image.py  save_popup.py  settings_window.py  splash_window.py  structure_classes.py  warning_window.py
src/windows_installer/: config.aip  make_installer.bat  myofinder.cpp  start_cellen_tellen.bat  start_myofinder.bat
src/wix/: LICENSE.rtf  myofinder.wxs
src/wix/custom_ui/: browse_dialog.wxs  confirm_exit_dialog.wxs  custom_ui.wxs  customize_dialog.wxs  failure_dialog.wxs  license_dialog.wxs  progress_dialog.wxs  success_dialog.wxs  token_dialog.wxs  user_exit_dialog.wxs  welcome_dialog.wxs
src/wix/docs/: README.rtf
src/wix/src/: install_venv.cpp  logger.cpp  myofinder.cpp  read_register.cpp  rollback_install.cpp  run_cmd.cpp  save_token.cpp  verify_install.cpp
tests/: __init__.py  interface.py  mock_filedialog.py  mock_messagebox.py  mock_warning_window.py  test_01_exit.py  test_02_load_no_images.py  test_03_load_images.py  test_04_click_table.py  test_05_click_image.py  test_06_zoom_in_out.py  test_07_drag.py  test_08_set_channels.py  test_09_delete_image.py  test_10_delete_partial.py  test_11_process_images.py  test_12_stop_process_images.py  test_13_indicators_display.py  test_14_save_project.py  test_15_new_project.py  test_16_load_project.py  test_17_delete_project.py  test_18_change_settings.py  test_19_process_vary_settings.py  test_20_save_vary_settings.py  test_21_process_vary_channels.py
tests/util/: __init__.py  base_classes.py  mock_filedialog.py  mock_messagebox.py  mock_warning_window.py
